--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -188,12 +188,31 @@
             android:scaleType="fitStart"
             android:src="@drawable/action_next" />
     </LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/warning_layout"
+        android:layout_below="@+id/seek_buttons_layout"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#ff242424"
+        android:orientation="horizontal"
+        android:paddingBottom="2dp"
+        android:paddingTop="2dp">
+>
+
+        <TextView
+            android:id="@+id/warning_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text=""
+            android:textColor="@color/apptheme_color"></TextView>
+    </LinearLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/details_layout"
         android:layout_width="match_parent"
         android:layout_height="175dp"
-        android:layout_below="@id/seek_buttons_layout"
+        android:layout_below="@id/warning_layout"
         android:background="#ff242424"
         android:gravity="left"
         android:orientation="horizontal">
