--- a/app/src/main/res/values-v11/themes.xml
+++ b/app/src/main/res/values-v11/themes.xml
@@ -22,7 +22,7 @@
 
   <style name="AppTheme" parent="@style/_AppTheme"/>
 
-  <style name="_AppTheme" parent="android:Theme.Holo.Light">
+  <style name="_AppTheme" parent="Theme.AppCompat.NoActionBar">
 
       <item name="android:seekBarStyle">@style/SeekBarAppTheme</item>
       <item name="android:fastScrollThumbDrawable">@drawable/fastscroll_thumb_holo</item>
