--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,13 +63,8 @@
         <item name="android:color">#ffff0000</item>
     </style>
 
-    <style name="PreferenceTheme" parent="">
-        <!--
-        do not work on 2.3, works on 4.1
-        todo: make it work everywhere
-        -->
-        <item name="android:textColorSecondary">@color/apptheme_color</item>
+    <style name="PreferenceTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorAccent">@color/apptheme_color</item>
     </style>
-
 
 </resources>
