--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -181,13 +182,27 @@
             style="@style/BottomButton"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:layout_weight="51"
+            android:layout_weight="53"
             android:onClick="seek"
             android:paddingBottom="0dp"
             android:paddingLeft="5dp"
             android:paddingTop="0dp"
             android:scaleType="fitStart"
             android:src="@drawable/action_next" />
+
+        <ImageButton
+            android:id="@+id/track_looper_button"
+            style="@style/BottomButton"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="51"
+            android:onClick="trackLooperClick"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="0dp"
+            android:paddingRight="8dp"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/ic_track_looper"/>
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/warning_layout"
