Improve app icon

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -58,7 +58,7 @@
         <Preference
             android:title="@string/help_details_menu"
             android:summary="@string/help_details_menu_summary"
-            android:icon="@drawable/ic_launcher"/>
+            android:icon="@mipmap/ic_launcher"/>
 
         <Preference
             android:title="@string/help_seek_menu"
