Remove settings icon

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -42,5 +42,6 @@
 
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:icon="@drawable/ic_menu_settings" />
+         /> <!-- android:icon="@drawable/ic_menu_settings" -->
+
 </menu>
