misc song rating

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,7 @@
     <color name="RowGroupTextPlaying">#ffff0000</color>
     <color name="RowSongTextNormal">#ffffffff</color>
     <color name="RowSongTextDuration">#ffffffff</color>
+    <color name="RowSongTextHidden">#ff666666</color>
     <color name="RowBackground">#88000000</color>
     <color name="RowGroupFolderBackground">#88353535</color>
     <color name="RowGroupFolderArtistBackground">#88000000</color>
