--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,8 @@
 
     <color name="apptheme_color">#f30000</color>
 
+    <color name="LightGrey">#ff666666</color>
+
     <color name="RowGroupTextNormal">#fff0f0f0</color>
     <color name="RowGroupTextPlaying">#ffff0000</color>
     <color name="RowSongTextNormal">#ffffffff</color>
@@ -44,11 +46,11 @@
     <color name="RowGroupArtistBackground">#88353535</color>
     <color name="RowGroupArtistAlbumBackground">#88000000</color>
     <color name="RowGroupTreeBackground">#88353535</color>
-    <color name="TrackLooperNormal">#ff666666</color>
+    <color name="TrackLooperNormal">@color/LightGrey</color>
     <color name="TrackLooperActivated">@color/apptheme_color</color>
     <color name="PlaybackControlAction">@color/apptheme_color</color>
     <color name="RatingHighlight">@color/apptheme_color</color>
-    <color name="RatingNormal">#ff666666</color>
+    <color name="RatingNormal">@color/LightGrey</color>
 
     <!-- todo
     <item "levelOffset"">15</item>
