--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -167,7 +167,7 @@
             <EditTextPreference
                 android:key="TEXT_SIZE_NORMAL"
                 android:title="@string/settings_text_size_regular"
-                android:numeric="integer"
+                android:inputType="number"
                 android:icon="@drawable/ic_menu_text_regular"
                 android:summary=""
                 android:defaultValue="@string/settings_text_size_regular_default"
@@ -176,7 +176,7 @@
             <EditTextPreference
                 android:key="TEXT_SIZE_BIG"
                 android:title="@string/settings_text_size_big"
-                android:numeric="integer"
+                android:inputType="number"
                 android:summary=""
                 android:icon="@drawable/ic_menu_text_big"
                 android:defaultValue="@string/settings_text_size_big_default"
@@ -201,7 +201,7 @@
                 android:key="SHAKE_THRESHOLD"
                 android:title="@string/settings_accelerometer_threshold"
                 android:summary="@string/settings_default_shake_threshold"
-                android:numeric="integer"
+                android:inputType="number"
                 android:defaultValue="@string/settings_default_shake_threshold"/>
 
         </PreferenceCategory>
@@ -227,7 +227,7 @@
             <EditTextPreference
                 android:key="UNFOLD_SUBGROUP_THRESHOLD"
                 android:title="@string/settings_unfold_subgroup_threshold"
-                android:numeric="integer"
+                android:inputType="number"
                 android:defaultValue="@string/settings_unfold_subgroup_threshold_default"
                 />
 
