Cleanup some settings code

--- a/app/src/main/res/xml/menu.xml
+++ b/app/src/main/res/xml/menu.xml
@@ -108,7 +108,7 @@
             android:defaultValue="false"/>
 
         <Preference
-            android:key="@string/settings_rescan_key"
+            android:key="RESCAN"
             android:title="@string/settings_rescan_title"
             android:summary="@string/settings_rescan"/>
 
@@ -143,7 +143,7 @@
                     android:summary="@string/settings_licence"/>
 
                 <Preference
-                    android:key="@string/settings_donate_key"
+                    android:key="DONATE"
                     android:title="@string/settings_donate_title"
                     android:summary="@string/settings_donate_summary"/>
 
