--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -546,6 +546,9 @@
             android:layout_weight="50"
             android:longClickable="true"
             android:onClick="gotoCurrSong"
+            android:scaleType="fitCenter"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:src="@drawable/action_goto_play" />
 
         <ImageButton
