--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -44,7 +44,7 @@
 
     <ImageView
         android:id="@+id/curr_play"
-        android:layout_width="wrap_content"
+        android:layout_width="16dp"
         android:layout_height="wrap_content"
         android:src="@null"
         android:layout_alignParentLeft="true"
